--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   background-color: #F2F2F2;
   color: black;
   font-size: calc(10px + 2vmin);
+  font-family: 'Noto Sans JP', sans-serif;
+}
+
+.App a {
+  text-decoration: none;
 }
 
 .App-logo {
@@ -15,6 +20,7 @@
 
 .AboutMe .ProfilePic {
   margin: 15px;
+  padding: 10px;
   float: left;
 }
 
@@ -22,8 +28,17 @@
   color: #61dafb;
 }
 
+.ArtExample img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ArtExample p {
+  text-align: center;
+}
+
 .Contact {
-  margin: 10px;
   background-color: #fff;
   padding: 15px;
   width: 100%;
@@ -52,7 +67,6 @@
 
 .Highlighted {
   background: rgb(255, 255, 215);
-  padding: 6px;
 }
 
 .MainFlexContainer {
@@ -61,8 +75,22 @@
   flex-wrap: wrap;
 }
 
+.MainFlexContainer a {
+  color: grey;
+}
 .Portfolio {
   margin: 10px;
+}
+.Portfolio .Description {
+  padding-left: 25px;
+}
+
+.Portfolio .Projects {
+  color: #bbb;
+  background: black;
+  border-radius: 40px;
+  margin: 25px;
+  padding: 25px;
 }
 
 .ReactAd {
@@ -70,23 +98,6 @@
   color: grey;
   margin: 10px;
   padding: 15px;
-}
-
-.ReadMore button {
-  border: 0px;
-  padding: 0px;
-  margin-top: 15px;
-  background: #f2f2f2;
-  color: grey;
-  font-size: 100%;
-}
-.ReadMore .showing {
-  display: block;
-  color: black;
-}
-.ReadMore .hidden {
-  display: none;
-  color: red;
 }
 
 .TopBanner {
@@ -105,6 +116,7 @@
   text-align: center;
   color: #777777;
   font-size: 150%;
+  font-weight: lighter;
 }
 
 .TopBar {
@@ -142,7 +154,6 @@
   background-color: #D3D3D3;
   display: flex;
   flex-direction: row;
-  margin: 10px; /* Same as MainFlexContainer */
   padding: 15px; /* Nice cushion */
 }
 .Footer .Copyright {
