--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,6 @@
   text-decoration: none;
 }
 
-.App p {
-  text-indent: 2em;
-}
-
-.App h1, h2, h3, h4, h5 {
-  text-indent: 1em;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -162,7 +154,7 @@
 
 /* Change background on mouse-over */
 .TopBar a:hover {
-  background: #ddd;
+  background: rgb(119, 119, 119);
   color: black;
 }
 
